# vrx

./: .dockerignore  .gitignore  Dockerfile  README.md  run.sh  setup.sh
catkin_ws/src/control/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/control/cfg/: MixerParams.cfg  PIDParams.cfg
catkin_ws/src/control/include/: controller.h  waypoint_controller.h
catkin_ws/src/control/launch/: control.launch  pid.launch
catkin_ws/src/control/msg/: ThrusterCmd.msg
catkin_ws/src/control/scripts/: diffdrive_exec.py  translator.py  waypoint_controller.py
catkin_ws/src/control/src/: controller.cpp  waypoint_controller.cpp
catkin_ws/src/control/src/control/: __init__.py
catkin_ws/src/control/src/control/effort/: __init__.py  diffdrive.py
catkin_ws/src/control/src/pid/: pid.h
catkin_ws/src/control/srv/: Waypoint.srv
catkin_ws/src/navigation/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/launch/: navigation.launch
catkin_ws/src/navigation/scripts/: waypoint.py
catkin_ws/src/navigation/src/navigation/: waypoint.py
catkin_ws/src/navigation/srv/: GeoToUTM.srv
catkin_ws/src/perception/: CMakeLists.txt  package.xml
catkin_ws/src/perception/launch/: classification.launch  perception.launch
catkin_ws/src/perception/msg/: Classification.msg
catkin_ws/src/perception/src/: classification.cpp  detection.cpp
catkin_ws/src/perception/srv/: ClassifyObjects.srv  DetectObjects.srv
catkin_ws/src/planner/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/planner/action/: Detect.action  Hold.action  Navigate.action  Pivot.action
catkin_ws/src/planner/config/: planner.yaml
catkin_ws/src/planner/launch/: planner.launch
catkin_ws/src/planner/scripts/: planner_node.py
catkin_ws/src/planner/src/planner/: __init__.py  planner.py
catkin_ws/src/planner/src/planner/actions/: __init__.py  detect.py  hold_pose.py  nav_path.py  nav_wp.py  navigate.py  pivot.py
catkin_ws/src/planner/src/planner/tasks/: __init__.py  navigation_course.py  perception.py  scan.py  scan_and_dock.py  station_keeping.py  wayfinding.py
catkin_ws/src/planner/src/planner/utils/: __init__.py
catkin_ws/src/vrx_models/: CMakeLists.txt  package.xml
catkin_ws/src/vrx_models/config/: sensor_config.yaml  wamv1.urdf
catkin_ws/src/vrx_models/configs/: thruster_config.yaml
catkin_ws/src/vrx_models/launch/: obstacle_demo.launch
catkin_ws/src/vrx_models/models/navigation_course_easy/: model.sdf
catkin_ws/src/vrx_sim/: CMakeLists.txt  package.xml
catkin_ws/src/vrx_sim/launch/: obstacle_demo.launch
catkin_ws/src/vrx_sim/models/navigation_course_easy/: model.config
catkin_ws/src/vrx_sim/worlds/: obstacle_demo.world.xacro
tools/: README.md
tools/gazebo/: README.md  upgrade-gazebo.sh
