<?xml version="1.0"?>
<package format="2">
  <name>control</name>
  <version>0.0.0</version>
  <description>
    MR VRX Control Package
  </description>

  <maintainer email="jgomallette@gmail.com">
    Jeremy (MrCerealKiller)
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>genmsg</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pid</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

</package>
