<?xml version="1.0"?>
<package format="2">
  <name>planner</name>
  <version>0.0.0</version>
  <description>The McGill Robotics VRX mission planning package</description>

  <maintainer email="jgomallette@gmail.com">
    MrCerealKiller (Jeremy)
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>message_generation</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>
  <depend>std_msgs</depend>
  <depend>vrx_gazebo</depend>
</package>
